fixed footer contrast and adjusted text

--- a/src/components/Layout/Footer/Footer.scss
+++ b/src/components/Layout/Footer/Footer.scss
@@ -180,12 +180,12 @@
     }
 
     &.secondary {
-      opacity: 0.5;
+      opacity: 0.72;
     }
   }
 
   &__copyright {
-    color: rgba($color-grey-light, 0.5);
+    color: rgba($color-grey-light, 0.72);
     font-weight: 300;
   }
 }
